Increase minimum height to avoid disconcerting jumping of footer.

--- a/express-app/lfg2.less
+++ b/express-app/lfg2.less
@@ -355,6 +355,7 @@
     margin-top: 6px;
     background-color: @brightBeige;
     padding: 6px;
+    min-height: 600px;
 
     .expandcollapseall {
       float: right;
